# sel4_lib-based-bench

./: .gitignore  .gitmodules  Makefile  README.md  config.txt  requirements.txt
benchset/: CMakeLists.txt
benchset/src/: main.c
fglbench/: CMakeLists.txt
fglbench/src/: benchmarks.c  main.c
patches/projects/sel4test/: 0001-include-fglbench.patch
